2001-11-07  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_general.c: Convert BK_MALLOC to new semantic
	* lib/b_run.c: Convert BK_MALLOC to new semantic
	(bk_run_once): Convert to BK_TV_CMP instead of using float comparison

	* lib/b_config.c: Convert BK_MALLOC to new semantic

2001-11-06  James Tanis  <jtt@winwood.sysdetect.com>

	* test/test_getbyfoo.c (progrun): test program for getbyfoo
	functions. 

	* lib/b_getbyfoo.c (bk_getprotobyfoo): Get protoent by
	anything (not yet mutex'ed).
	(bk_protoent_destroy): Destroy a protoent created by above.
	(bk_getprotobyfoo): Get a servent by anything.
	(bk_protoent_destroy): Destroy the servent created above.

	* lib/b_config.c (bk_config_init): All user to pass in preferences.
	(bk_config_print): print config file.
	(load_config_from_file): Support for included files.
	(check_for_double_include): Recursive function to eliminate double
	inclusion.

	* src/proto.c (main): make sure we call debug_setconfig when
	debugging is turned on.

2001-11-05  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_ioh.c: More functions filled out.

	* lib/b_stdfun.c: Document standard functions.

	* lib/*.c: Change to new CLC iterate interface, updating all CLC #defines
	
	* lib/b_error.c: Add mark and filtering handling to error queue to improve its capabilities.
	Document error handling.
	
2001-11-05  James Tanis  <jtt@winwood.sysdetect.com>

	* src/proto.c (main): Port to popt.

2001-11-02  James Tanis  <jtt@winwood.sysdetect.com>

	* lib/b_run.c (bk_run_destroy): don't destroy things twice, but
	destroy everything at least once.

2001-11-01  James Tanis  <jtt@localhost.localdomain>

	* lib/b_run.c (bk_run_once): Add on demand function calls.
	(bk_run_on_demand_add): Public functions to add and remove functions
	to and from on demand list.
	(bk_run_once): sort out whether idle task should be run.
	(bk_run_once): sort out exactly which timeout to use in select.

2001-11-01  James Tanis  <jtt@saint.sysdetect.com>
